--- a/LX_after.html
+++ b/LX_after.html
@@ -91,10 +91,10 @@
 		<div class="topcard">
 			<div>
 			<p style="font-weight: 700; padding-top: 5px; font-size: 23px; padding: 4px;" contenteditable="false">
-				<span id="surname">陈</span><span id="givenname">一路</span>
+				<span id="surname">杨</span><span id="givenname">皓晰</span>
 			</p>
 			<p contenteditable="false">
-				学号：20<span>20</span>22<span>61</span><span>60</span><span>06</span>
+				学号：20<span>20</span>22<span>60</span><span>70</span><span>64</span>
 			</p>
 			<p contenteditable="false">
 				班级：物理电子工程学院
