--- a/LX_after.html
+++ b/LX_after.html
@@ -31,7 +31,7 @@
 			.pic{
 				height: 100%;
 				background-color: red;
-				background-image: url("lrx.jpg");
+				background-image: url("lrx.JPG");
 				background-size: cover;
 			}
 			.topcard p{
